--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,9 @@ body, html {
   background-color: #f5f5f5;
 }
 
-.engraved-text {
+.engraved-text a {
   font-family: "Helvetica Neue", sans-serif;
+  text-decoration: none !important;
   font-size: 10em;
   color: #f0f0f0;
   text-shadow: 
