--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,11 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
-.engraved-text {
-  font-family: "Helvetica Neue", sans-serif;
-  font-size: 10em;
-  color: #f0f0f0;
-  text-shadow: 
-    1px 1px 0 #d0d0d0,
-    -1px -1px 0 #ffffff;
+.title-text {
+  font-family: "Poppins", sans-serif;
+  font-size: 2em;
+  color: #000000;
 }
