--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body, html {
 }
 
 .title-text {
-  font-family: "Poppins", sans-serif;
-  font-size: 1em;
+  font-family: "Roboto", sans-serif;
+  font-size: 2.5em;
   color: #000000;
 }
