--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,25 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Titillium Web", sans-serif;
   background-color: #ffffff;
 }
 
 .title-text {
-  font-family: "Titillium Web", sans-serif;
+  text-align: center;
+}
+
+.title-text h1 {
   font-size: 2.5em;
   color: #000000;
 }
+
+.title-text p {
+  font-size: 1em;
+  color: #000000;
+}
+
+
 ::selection {
   background: #bebebe71;  /* Modern grey */
   color: #000000;  /* Text color when highlighted */
