--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Handjet";
-  background-color: #ffffff;
+  font-family: "Comfortaa";
+  background-color: #000000;
 }
 
 .ascii-container {
@@ -18,7 +18,7 @@ body, html {
   display: inline-block;
   text-align: left;
   margin: auto;
-  font-family: "Handjet", cursive;
+  font-family: "Comfortaa";
 }
 
 .dissolve-mask {
@@ -27,7 +27,7 @@ body, html {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #fff;
+  background: #000000;
   z-index: 9999;
   opacity: 1;
   pointer-events: none;
@@ -46,34 +46,30 @@ body, html {
   text-align: center;
   z-index: 1;
 }
-
-.title-text h1 {
-  font-size: 3em;
-  font-weight: normal;
-  color: #000000;
-}
-
 .hover-word {
   transition: color 0.25s ease;
 }
 
 .hover-word:hover {
-  color: grey;
+  color: rgb(240, 240, 240);
 }
 
 .dot {
-  color: #000000;
+  color: #ffffff;
 }
 
 .title-text p {
-  font-family: 'Handjet', cursive;
-  font-size: 1.75em;
-  color: #000000;
+  font-family: 'Comfortaa';
+  font-size: 1.15em;
+  color: #ffffff;
 }
 
-.title-text a {
-  text-decoration: dotted;
-  color: #000000;
+.title-text h1 a {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 1em;
+  font-family: 'Comfortaa', sans-serif;
+  font-weight: normal;
 }
 
 .title-text h2 {
@@ -83,6 +79,6 @@ body, html {
 }
 
 ::selection {
-  background: #bebebe71;  /* Modern grey */
-  color: #000000;  /* Text color when highlighted */
+  background: #29292950;  /* Modern grey */
+  color: #e0e0e0;  /* Text color when highlighted */
 }
