--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Noto Sans Linear B';
+  src: url('./fonts/NotoSansLinearB-Regular.ttf') format('truetype');
+}
+
 body, html {
   margin: 0;
   padding: 0;
@@ -5,8 +10,9 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Kanit";
-  background-color: #000000;
+  font-family: "Noto Sans Linear B", sans-serif;
+  background-color: #22223b;
+  color: #9a8c98;
 }
 
 .ascii-container {
@@ -18,7 +24,6 @@ body, html {
   display: inline-block;
   text-align: left;
   margin: auto;
-  font-family: "Kanit";
 }
 
 .dissolve-mask {
@@ -27,7 +32,7 @@ body, html {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #000000;
+  background: #22223b;
   z-index: 9999;
   opacity: 1;
   pointer-events: none;
@@ -51,34 +56,26 @@ body, html {
 }
 
 .hover-word:hover {
-  color: rgb(240, 240, 240);
-}
-
-.dot {
-  color: #ffffff;
+  color: #c9ada7;
 }
 
 .title-text p {
-  font-family: 'Kanit';
   font-size: 1.15em;
-  color: #ffffff;
 }
 
 .title-text h1 a {
   text-decoration: none;
-  color: #ffffff;
+  color: #9a8c98;
   font-size: 1em;
-  font-family: 'Kanit', sans-serif;
   font-weight: normal;
 }
 
 .title-text h2 {
-  color: bebebe71;
   user-select: none;
   font-size: 1em;
 }
 
 ::selection {
-  background: #29292950;  /* Modern grey */
-  color: #e0e0e0;  /* Text color when highlighted */
+  background: #c9ada7;  /* Modern grey */
+  color: #4a4e69;  /* Text color when highlighted */
 }
