--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body, html {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #22223b;
+  background: #B8A9A1;
   z-index: 9999;
   opacity: 1;
   pointer-events: none;
