--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body, html {
   justify-content: center;
   align-items: center;
   font-family: "Noto Sans Linear B", sans-serif;
-  background-color: #B8A9A1;
+  background-color: #CDC8CE;
   color: #2d3b49;
 }
 
@@ -32,7 +32,7 @@ body, html {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #B8A9A1;
+  background: #CDC8CE;
   z-index: 9999;
   opacity: 1;
   pointer-events: none;
