--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body, html {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #CDC8CE;
+  background: #e1d8e2;
   z-index: 9999;
   opacity: 1;
   pointer-events: none;
