--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body, html {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #e1d8e2;
+  background: white;
   z-index: 9999;
   opacity: 1;
   pointer-events: none;
