--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,6 @@ body, html {
   font-family: 'Boston Regular';
 }
 
-
-
 .ascii-container {
   text-align: center;
 }
@@ -45,4 +43,16 @@ body, html {
 
 h2 {
   margin: 0; /* Remove default margin */
+}
+
+.responsive-google-slides {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard syntax */
 }
