--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,13 @@ body, html {
 h2 {
   margin: 0; /* Remove default margin */
 }
+.responsive-google-slides iframe {
+  max-width: 100%;
+  max-height: 100%;
+  width: 1920px;
+  height: 1080px;
+}
+
 
 .responsive-google-slides {
   display: flex;
