--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@
 
 body, html {
   margin: 0;
+  height: 100%;
+
   padding: 0;
   font-family: 'Boston Regular';
 }
@@ -44,6 +46,7 @@ body, html {
 h2 {
   margin: 0; /* Remove default margin */
 }
+
 .responsive-google-slides iframe {
   max-width: 100%;
   max-height: 100%;
@@ -51,13 +54,11 @@ h2 {
   height: 1080px;
 }
 
-
 .responsive-google-slides {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  width: 100%;
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+/Edge */
