--- a/styles.css
+++ b/styles.css
@@ -42,9 +42,18 @@ body, html {
   width: 100%; /* Full width to center the text properly */
   text-align: center; /* Center text horizontally */
 }
+h1 {
+  margin: 0;
+}
 
 h2 {
   margin: 0; /* Remove default margin */
+}
+
+#gradient-canvas {
+  width: 100vw;
+  height: 100vh;
+  background: radial-gradient(circle, #ffffff, #ffffff); /* Start with white */
 }
 
 .responsive-google-slides iframe {
